# take-home

./: .gitignore
environments/data_pipeline_python/: README.md  data_pipeline.py  pyproject.toml
environments/data_pipeline_python/tasks/sales-aggregation/: instruction.md  solve.sh  verify.py
environments/swe_harbor/: plan.md
environments/swe_harbor/tasks/: README.md
environments/swe_harbor/tasks/_template/tests/: test_solution.py
environments/swe_harbor/tasks/add-bulk-check-actions/: instruction.md  task.toml
environments/swe_harbor/tasks/add-bulk-check-actions/solution/: solve.sh
environments/swe_harbor/tasks/add-bulk-check-actions/tests/: test_solution.py
environments/swe_harbor/tasks/add-check-dependency-suppression/: instruction.md  task.toml
environments/swe_harbor/tasks/add-check-dependency-suppression/solution/: solve.sh
environments/swe_harbor/tasks/add-check-dependency-suppression/tests/: test_solution.py
environments/swe_harbor/tasks/add-maintenance-window/: instruction.md  task.toml
environments/swe_harbor/tasks/add-maintenance-window/solution/: solve.sh
environments/swe_harbor/tasks/add-maintenance-window/tests/: test_solution.py
environments/swe_harbor/tasks/add-ping-statistics/: instruction.md  task.toml
environments/swe_harbor/tasks/add-ping-statistics/solution/: solve.sh
environments/swe_harbor/tasks/add-ping-statistics/tests/: test_solution.py
environments/swe_harbor/tasks/add-sla-reporting/: instruction.md
environments/swe_harbor/tasks/add-sla-reporting/solution/: solve.sh
(+4 files in other folders)
