[project]
name = "data-pipeline-python"
description = "DataPipeline RL environment: persistent Python REPL data transformation tasks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10.dev4",
    "prime-sandboxes>=0.2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["data_pipeline.py", "pyproject.toml", "tasks/**/*"]

[tool.verifiers.eval]
num_examples = 3
rollouts_per_example = 3

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]
